프로젝트명 수정

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.29)
-project(cpp-boilerplate)
+project(cpp-playground)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
-        cpp-boilerplate
+        cpp-playground
         main.cpp
         Actor/Actor.cpp
         Actor/Actor.h
@@ -18,10 +18,10 @@ add_executable(
         Network/SendFilter/Filter/PacketSendFilterBase.h
         Network/SendFilter/Filter/PacketSendFilterDoOnce.cpp
         Network/SendFilter/Filter/PacketSendFilterDoOnce.h
+        Network/SendFilter/Filter/PacketSendFilterCooldown.cpp
+        Network/SendFilter/Filter/PacketSendFilterCooldown.h
         Network/SendFilter/PakcetSendFilterManager.cpp
         Network/SendFilter/PakcetSendFilterManager.h
         Log/LogDefinition.h
         Network/Packet/PacketDefinition.h
-        Network/SendFilter/Filter/PacketSendFilterCooldown.cpp
-        Network/SendFilter/Filter/PacketSendFilterCooldown.h
 )
